# Barcode_Create_Word

./: .gitignore  BarcodeLabelGenerator.spec  README.md  get_table_info.py  items.xlsx  main.py  main.spec  make_labels_template.py  products.xlsx  pyproject.toml  requirements.txt  run_app.py  test_barcode_exe.py
backup/: make_labels_template.py
data/: items.xlsx
src/: __init__.py  main.py
src/models/: barcode_generator.py  product.py
src/services/: barcode_generator.py  excel_service.py  file_service.py  log_service.py  word_service.py
src/ui/: admin_log_dialog.py  category_dialog.py  main_window.py  product_widget.py  settings_dialog.py  styles.py
templates/: 3102.docx  3106.docx  3111.docx  3677.docx  ilabel_270.docx
